патчи под новый bsl parser